--- a/.github/workflows/minikube.yml
+++ b/.github/workflows/minikube.yml
@@ -1,46 +1,37 @@
-name: Minikube CI
+name: Minikube CI Setup
 
 on:
   push:
-    branches:
-      - main  # or whichever branch you want
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-  minikube:
+  setup-minikube:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Install kubectl
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y apt-transport-https ca-certificates curl
-          sudo curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
-          echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
-          sudo apt-get update
-          sudo apt-get install -y kubectl
+    - name: Set up Kubernetes tools
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y apt-transport-https ca-certificates curl
+        sudo curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
+        echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-jammy main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
+        sudo apt-get update
+        sudo apt-get install -y kubectl conntrack
 
-      - name: Install Minikube
-        run: |
-          curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-          chmod +x minikube
-          sudo mv minikube /usr/local/bin/
+    - name: Install Minikube
+      run: |
+        curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+        sudo install minikube-linux-amd64 /usr/local/bin/minikube
 
-      - name: Start Minikube
-        run: |
-          sudo minikube start --driver=none
-        env:
-          CHANGE_MINIKUBE_NONE_USER: true
-          MINIKUBE_IN_STYLE: false
+    - name: Start Minikube
+      run: |
+        sudo minikube start --driver=docker
+        minikube status
 
-      - name: Verify Cluster
-        run: |
-          kubectl cluster-info
-          kubectl get nodes
-
-      # Optional: Deploy something
-      # - name: Apply Kubernetes manifest
-      #   run: |
-      #     kubectl apply -f k8s/your-pod-or-deployment.yaml
+    - name: Verify Kubernetes cluster
+      run: kubectl get pods -A
