--- a/.github/workflows/minikube.yml
+++ b/.github/workflows/minikube.yml
@@ -1,37 +1,34 @@
-name: Minikube CI Setup
+name: Minikube CI Test
 
 on:
-  push:
-    branches: [main]
   pull_request:
-    branches: [main]
 
 jobs:
-  setup-minikube:
+  test-on-minikube:
     runs-on: ubuntu-latest
-
+    name: Build and Deploy to Minikube
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Kubernetes tools
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y apt-transport-https ca-certificates curl
-        sudo curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
-        echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-jammy main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
-        sudo apt-get update
-        sudo apt-get install -y kubectl conntrack
+      - name: Start Minikube
+        uses: medyagh/setup-minikube@latest
 
-    - name: Install Minikube
-      run: |
-        curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-        sudo install minikube-linux-amd64 /usr/local/bin/minikube
+      - name: Verify cluster
+        run: kubectl get nodes
 
-    - name: Start Minikube
-      run: |
-        sudo minikube start --driver=docker
-        minikube status
+      - name: Build image using Minikube
+        run: |
+          minikube image build -t local/example:latest .
 
-    - name: Verify Kubernetes cluster
-      run: kubectl get pods -A
+      - name: Deploy to Minikube
+        run: |
+          kubectl apply -f deploy/k8s.yaml
+          kubectl wait --for=condition=ready pod -l app=example --timeout=120s
+
+      - name: Test service
+        run: |
+          minikube service list
+          URL=$(minikube service example --url)
+          echo "Service URL: $URL"
+          curl $URL || echo "Service test failed"
